<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <TextView
        android:id="@+id/tvHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/diaCorriente" />

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHistorial"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/inicio" />

    <Button
        android:id="@+id/btnFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnInicio"
        android:layout_alignRight="@+id/btnInicio"
        android:layout_below="@+id/btnInicio"
        android:text="@string/fin" />

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="verHistorial"
        android:text="@string/verHistorial" />

    <Button
        android:id="@+id/btnPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="verNotas"
        android:text="@string/verNotas" />

</RelativeLayout>
