<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <TextView
        android:id="@+id/tvHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sintomas" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHistorial"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/btnInicio"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/lvHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAddNota"
        android:layout_toRightOf="@+id/tvHistorial" >

    </ListView>

    <Button
        android:id="@+id/btnAddNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/lvHistorial"
        android:layout_marginBottom="23dp"
        android:text="@string/addNota" />

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAddNota"
        android:layout_alignBottom="@+id/btnAddNota"
        android:layout_alignLeft="@+id/linearLayout1"
        android:text="@string/lblInicio" />

</RelativeLayout>